# taskx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
docs/assets/: taskx-logo.txt
src/: main.rs
src/app/: mod.rs
src/inputs/: mod.rs
src/models/: mod.rs
src/storage/: storage_manager.rs
src/ui/: colors.rs  help.rs  kanban_view.rs  list_view.rs  mod.rs  tabs.rs  task_detail.rs
src/utils/: mod.rs
